[package]
name = "tsool-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "~1", features = ["full"] }
axum = { version = "~0.8", features = ["macros"] }
axum-extra = { version = "~0.10", features = ["typed-header"] }
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
thiserror = "~2"
chrono = { version = "~0.4", features = ["serde"] }
uuid = { version = "~1.17", features = ["fast-rng", "v4"] }
dotenvy = "~0.15"
tracing = { version = "~0.1" }
tracing-subscriber = { version = "~0.3", features = ["json", "env-filter"] }
surrealdb = { version = "~2.3" }
jsonwebtoken = { version = "~9" }

[lib]
path = "src/lib.rs"
name = "tsool_backend"
